final solution (implementation)